--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Bucket List App - Simon Lee</title>
 	<link rel="stylesheet" href="/style/style.css">
-	<link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+	<HTML>
 </head>
 <body>
 
